Fixed razor view

--- a/Slot3/Slot3/Slot3/Views/CustomModelBinder/Index.cshtml
+++ b/Slot3/Slot3/Slot3/Views/CustomModelBinder/Index.cshtml
@@ -1,4 +1,4 @@
 ﻿@model Slot3.Controllers.CustomModel
 
-<label asp-for="Now" />
-<input asp-for="Now" />
+<label asp-for="ATime" />
+<input asp-for="ATime" />
