add attribut to taghelper

--- a/Slot3/Slot3/Slot3/Views/CustomTagHelper/Index.cshtml
+++ b/Slot3/Slot3/Slot3/Views/CustomTagHelper/Index.cshtml
@@ -1,3 +1,2 @@
 ﻿
-Hallo
-<strong>Support:</strong><email>Support</email><br />
+<strong>IT-Support:</strong><email mail-to="susann.schmidt">Susann</email><br />
